# CS455_Mandelbrot

./: =testing.ppm  CMakeCache.txt  CMakeLists.txt  First.ppm  Makefile  Mandelbrot  Mandelbrot.cbp  Mandy.ppm  README.md  cmake_install.cmake  f  graphics_utilities.c  graphics_utilities.h  main.c  mandelbrot  mandelbrot.c  mandelbrot.cbp  mandelbrot.h  no.pgm  simpleGraphics  simpleGraphics.cbp  xwindows_utilities.c  xwindows_utilities.h
